Fix tiny shift of whole workspace when modal showing

--- a/apps/src/music/views/HeaderButtons.module.scss
+++ b/apps/src/music/views/HeaderButtons.module.scss
@@ -38,7 +38,7 @@
     }
 
     &Content {
-      padding: 0 14px;
+      padding: 0 14px 0 9px;
     }
   }
 }
